@@ -16,6 +16,7 @@
 	(PokerTableTestCase.test99_destroy_table): Renamed test10 to this.
 	(MockClient.getPlayerInfo): Wrote function.
 	(PokerTableTestCase.test10_info_and_chat): Wrote function.
+	(MockClient.autoBlindAnte): Wrote function.
 
 2008-01-19  Bradley M. Kuhn  <bkuhn@ebb.org>
 
